# zerochan-mcp

./: Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json  server.py  setup.sh
